Tune captcha OCR fallback flow